Added Navigation manager and application + little code improvements

--- a/lab2/CMakeLists.txt
+++ b/lab2/CMakeLists.txt
@@ -4,4 +4,4 @@ project(lab2)
 set(CMAKE_CXX_STANDARD 98)
 
 add_executable(lab2 main.cpp menu/CMenuItem.h menu/CMenuCommand.h commands/CCommand.h menu/CMenuCommand.cpp commands/CCommand.cpp menu/CMenu.cpp menu/CMenu.h menu/CMenuItemDelegate.h
-        CTable.h CTable.cpp CTableManager.h CTableManager.cpp commands/CreateTablesCommand.cpp commands/CreateTablesCommand.h commands/PrintTablesInfoCommand.cpp commands/PrintTablesInfoCommand.h commands/TableCommand.cpp commands/TableCommand.h)
+        table/CTable.h table/CTable.cpp table/CTableManager.h table/CTableManager.cpp commands/CreateTablesCommand.cpp commands/CreateTablesCommand.h commands/PrintTablesInfoCommand.cpp commands/PrintTablesInfoCommand.h commands/TableCommand.cpp commands/TableCommand.h application/Application.h application/MenuApplication.cpp application/MenuApplication.h NavigationManager.cpp NavigationManager.h)
